   Version 0.49
   Version 0.48
   Version 0.47
   Version 0.46
   Version 0.45
   Version 0.44
   Version 0.43
   Version 0.42
   Version 0.41
   Version 0.40
   Version 0.39
   Version 0.38
   Version 0.37
   Version 0.36
   Version 0.35

-----------------------------------------------------------------------
 Version 0.63
 ============

 Released on 
  
 New features and improvements:

   - ofaMiscCollector: remove double frame on each pages (todo #1251).
   - ofaRecPeriodProperties: add missing margins (todo #1249).
   - ofaTVARecordProperties: remove double correspondence frame.
   - ofaTVARecordStore: complete column content (todo #1247).
   - ofaTVARecordTreeview: rename column header (todo #1247).

 Bug fixes:

   - ofaOpeTemplateProperties: does not double the rows count on Cancel (todo #1250).
   - ofaRecPeriodProperties: does not unref spin adjustment.
   - ofaRecPeriodProperties: fix UI widget name.
   - ofaTVAFormProperties: does not unref spin adjustment.
   - ofaTVARecordPage: fix deletability check (todo #1248).

 Other changes:

   - 

-----------------------------------------------------------------------
 Version 0.62
 ============

 Released on 2016-11-09
  
 New features and improvements:

   - Error messages are full sentences (todo #1244).
   - Homogeneize Importers version numbers (todo #1240).
   - Plugin manager now displays the implemented DB models (todo #1241).
   - Have transactions when generating entries (todo #89).

 Bug fixes:

   - ofaITVColumnable: defines a dedicated scope (todo #1221, #1234).
   - Fix ledger closing.
   - Means of paiement page: double-click opens the properties dialog (todo #1245).

 Other changes:

   - ofaIThemeManager: renamed to ofaIPageManager (todo #1242).
   - ofaPaimeanFrameBin: is not an ofaIActioner.
   - ofaPeriodicity: remove obsoleted functions.

-----------------------------------------------------------------------
 Version 0.61
 ============

 Released on 2016-10-23
  