@@ -41,6 +41,7 @@
   
  New features and improvements:
 
+   - %BALCR, %BALDB: new formula engine macros.
    - ofaMiscCollector: remove double frame on each pages (todo #1251).
    - ofaRecPeriodProperties: add missing margins (todo #1249).
    - ofaTVARecordProperties: remove double correspondence frame.
